# teamTech23-24

./: README.md
front-end-app/: package-lock.json  package.json
front-end-app/public/: index.html  satelliteSchedule.json
front-end-app/server/: SatelliteData.js  package-lock.json  package.json
front-end-app/server/controllers/: Satellite.controller.js
front-end-app/server/models/: Satellite.js
front-end-app/server/mongodb/: connect.js
front-end-app/server/routes/: Satellite.routes.js
front-end-app/src/: App.js  Calendar.js  Details.js  Event.js  Events.js  datePicker.js  index.css  index.js
front-end-app/src/components/: DummyData.js  Map.css  Map.js  Navbar.css  Navbar.js  SearchBar.css
front-end-map/: package-lock.json  package.json
front-end-map/src/: App.css  App.js  satelliteSchedule.csv
front-end-map/src/components/: DummyData.js  Navbar.css  Navbar.js
front-end-map/src/components/map/: DateFilter.js  Map.css  Map.js  MapPage.js  SearchBar.css  TestSearch.js  searchBar.js
front-end-map/src/components/pages/: Home.css  Home.js
teamTech23-24-Backend/: satelliteSchedule.json
teamTech23-24-Backend/ReadData/: CMakeLists.txt  READ.ME  Satellite.cpp  Satellite.h  celestrakList.txt  document.hpp  groundStation.cpp  groundStation.h  satelliteSchedule.json  schedule.cpp
teamTech23-24-Backend/ReadData/sgp4-master/libsgp4/: Tle.h
